--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@
   --red-button-shadow: rgba(172, 16, 0, 0.64);
   --gray-input-hover: rgba(178, 178, 178, 0.52);
   --blue-border-focus: rgba(46, 136, 228, 0.52);
+  --scale-color: rgba(248, 247, 244, 0.5);
+  --dot-color: #ababab;
 }
 
 body {
@@ -166,7 +168,7 @@ a {
   position: absolute;
   bottom: -25px;
   left: 50%;
-  margin-left:-116px;
+  margin-left: -116px;
 }
 
 .catalog-item:hover .catalog-item-inner {
@@ -174,8 +176,8 @@ a {
   position: relative;
 }
 
-.catalog-item:hover::after{
-  content: '';
+.catalog-item:hover::after {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -188,7 +190,6 @@ a {
 
 .catalog-item-inner {
   padding: 6px 3px 21px 3px;
-
 }
 
 .catalog-item {
@@ -768,7 +769,7 @@ a {
 .documentation-list a:hover,
 .documentation-list a:focus {
   color: var(--light-orange-hover);
-  text-decoration-color:var(--light-orange-hover);
+  text-decoration-color: var(--light-orange-hover);
 }
 
 .documentation-item {
@@ -1232,22 +1233,50 @@ a {
   width: 218px;
   height: 32px;
   margin: 0;
-  padding: 0;
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
   border-radius: 20px;
   background-color: var(--gray-filters);
   cursor: pointer;
+  position: relative;
 }
 
-.filters-price-slider-inner {
-  width: 100%;
-  height: 100%;
-  background-image: url("../img/main/price-slider.svg");
-  background-repeat: no-repeat;
-  background-position: center;
+.filters-price-slider .toggle {
+  position: absolute;
+  top: 6px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  background-color: var(--dot-color);
+  border: 8px solid var(--basic-white);
+  border-radius: 50%;
 }
 
-.filters-price-slider-inner:hover{
-  transform: scale(1.05);
+.filters-price-slider .toggle-min {
+  left: 35px;
+}
+
+.toggle-min:hover,
+.toggle-max:hover {
+  transform: scale(1.1);
+}
+
+.filters-price-slider .toggle-max {
+  left: 135px;
+}
+
+.filters-price-slider .bar {
+  width: 60%;
+  height: 2px;
+  background: var(--light-beige);
+  margin-left: 20px;
+}
+
+.filters-price-slider .scale {
+  height: 2px;
+  background: var(--scale-color);
 }
 
 .filters-fat-list {
@@ -1549,7 +1578,7 @@ a {
   fill-opacity: 1;
 }
 
-.social-item:active{
+.social-item:active {
   border-color: var(--light-gray-border-active);
 }
 
