--- a/css/style.css
+++ b/css/style.css
@@ -1748,7 +1748,7 @@ a {
   display: flex;
 }
 
-.feedback-form .active {
+.active .feedback-form {
   -webkit-animation: bounce 0.6s;
   animation: bounce 0.6s;
 }
