--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,10 @@
   --burgundy-shadow: rgba(160, 32, 11, 0.76);
   --middle-gray-shadow: rgba(49, 50, 53, 0.5);
   --middle-gray-hover: rgba(255, 255, 255, 0.4);
-  --light-gray-hover: rgba(255, 255, 255, 0.2);
+  --gray-filters: rgba(255, 255, 255, 0.2);
   --middle-gray-input: rgba(255, 255, 255, 0.8);
   --middle-gray-border: rgba(255, 255, 255, 0.5);
   --light-gray-border-active: rgba(255, 255, 255, 0.7);
-  --gray-filters: rgba(255, 255, 255, 0.2);
   --orange-hover: #e84d37;
   --light-orange-hover: #ffbc9e;
   --gray-border: rgba(50, 50, 50, 0.2);
@@ -286,7 +285,7 @@ a {
   padding: 9px 13px;
   margin: 0 2px;
   text-decoration: underline;
-  text-decoration-color: var(--light-gray-hover);
+  text-decoration-color: var(--gray-filters);
 }
 
 .nav-list-item:hover {
@@ -343,18 +342,14 @@ a {
 }
 
 .button:hover {
-  background: linear-gradient(
-      0deg,
-      var(--light-gray-hover),
-      var(--light-gray-hover)
-    ),
-    linear-gradient(180deg, var(--middle-orange) 0%, var(--bright-orange) 100%);
+  background: linear-gradient(var(--gray-filters), var(--gray-filters)),
+    linear-gradient(180deg, var(--middle-orange) 0%, var(--bright-orange));
   box-shadow: 0px 2px 2px var(--dark-red);
 }
 
 .button:active {
-  background: linear-gradient(0deg, var(--black-hover), var(--black-hover)),
-    linear-gradient(180deg, var(--middle-orange) 0%, var(--bright-orange) 100%);
+  background: linear-gradient(var(--black-hover), var(--black-hover)),
+    linear-gradient(180deg, var(--middle-orange) 0%, var(--bright-orange));
   box-shadow: inset 0px 2px 2px var(--dark-red-shadow);
 }
 
@@ -748,9 +743,8 @@ a {
   border: none;
   border-radius: 70px;
   background-image: linear-gradient(
-    180deg,
-    var(--middle-orange) 0%,
-    var(--bright-orange) 100%
+    var(--middle-orange),
+    var(--bright-orange)
   );
   text-shadow: 0 2px 5px var(--burgundy-shadow);
   outline: none;
@@ -763,7 +757,7 @@ a {
   line-height: 18px;
   color: var(--basic-white);
   text-decoration: underline;
-  text-decoration-color: var(--light-gray-hover);
+  text-decoration-color: var(--gray-filters);
 }
 
 .documentation-list a:hover,
@@ -801,7 +795,7 @@ a {
 
 .development-title-link {
   text-decoration: underline;
-  text-decoration-color: var(--light-gray-hover);
+  text-decoration-color: var(--gray-filters);
 }
 
 .development-title-link:hover,
@@ -818,7 +812,7 @@ a {
   color: var(--basic-white);
   cursor: pointer;
   text-decoration: underline;
-  text-decoration-color: var(--light-gray-hover);
+  text-decoration-color: var(--gray-filters);
 }
 
 .catalog-item h3:hover {
@@ -1418,7 +1412,7 @@ a {
 }
 
 .pagination-item:hover {
-  background-color: var(--light-gray-hover);
+  background-color: var(--gray-filters);
   color: var(--basic-white);
 }
 
@@ -1602,8 +1596,8 @@ a {
 
 .footer-line {
   padding-top: 18px;
-  border-color: var(--light-gray-hover);
   border-top: 1px solid;
+  border-color: var(--gray-filters);
 }
 
 .development-title {
