--- a/css/style.css
+++ b/css/style.css
@@ -1426,6 +1426,7 @@ a {
 .pagination-list {
   position: relative;
   display: flex;
+  margin: 50px 0 25px 0;
   padding-right: 30px;
   padding-bottom: 10px;
 }
